# fearth-ios-gdk

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  FearthGdk.podspec  FearthGdk.release.podspec  LICENSE  README.md  build.sh  c_cpp_properties.json  genxcode.sh  publish_pod.sh  upload_release.sh
Documents/: CocoapodsGuide.md
Example/: Podfile  README.md
Example/FearthGdk/: FTHAppDelegate.h  FTHAppDelegate.m  FTHViewController.h  FTHViewController.m  main.m
Example/FearthGdk.xcodeproj/: project.pbxproj
Example/FearthGdk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/FearthGdk.xcodeproj/xcshareddata/xcschemes/: FearthGdk-Example.xcscheme
Example/FearthGdk.xcworkspace/: contents.xcworkspacedata
Example/FearthGdk/Base.lproj/: Main.storyboard
Example/Tests/: Tests.m
FearthGdk/Classes/: FearthGdk.m
docs/: CocoapodsGuide.md
frameworks/SwiftProtobuf.framework/: Info.plist  SwiftProtobuf
frameworks/SwiftProtobuf.framework/Modules/SwiftProtobuf.swiftmodule/: arm64-apple-ios.abi.json
frameworks/WalletCore.framework/Modules/WalletCore.swiftmodule/: arm64-apple-ios.swiftdoc
include/: FearthErrorCode.h  FearthGdk.h  FearthGdkConfig.h  FearthHelper.h  FearthHttpHelper.h  FearthJsonHelper.h  FearthUtils.h  FearthWalletHelper.h
sample/: Podfile
sample/fearth-ios-gdk-sample/: AppDelegate.m  ViewController.m  main.m
src/: FearthGdk.m  FearthGdkPrivate.h
src/WalletCore.framework/: Info.plist
src/WalletCore.framework/Modules/WalletCore.swiftmodule/: arm64-apple-ios.swiftinterface
src/data/: FearthGdkConfig.m
src/utils/: FearthHelper.m  FearthHttpHelper.m  FearthJsonHelper.m  FearthUtils.m  FearthWalletHelper.m
test/: Podfile  README.md
test/fearth-ios-gdk-sample/: AppDelegate.h  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m
test/fearth-ios-gdk-sample.xcodeproj/: project.pbxproj
test/fearth-ios-gdk-sample.xcworkspace/: contents.xcworkspacedata
